// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults component renders correctly 1`] = `
<React.Fragment>
  <SearchResultsPanel>
    <div>
      3000
       
      movies
       found (
      15
       shown)
    </div>
    <Radio
      label="Sort by"
      name="sortBy"
      onChange={[MockFunction]}
      options={
        Array [
          Object {
            "name": "release date",
            "value": "release_date",
          },
          Object {
            "name": "rating",
            "value": "vote_average",
          },
        ]
      }
      style="plain"
      value="release_date"
    />
  </SearchResultsPanel>
  <FilmsGrid
    films={Array []}
  />
</React.Fragment>
`;

exports[`SearchResults component renders correctly when only one movie is found 1`] = `
<React.Fragment>
  <SearchResultsPanel>
    <div>
      1
       
      movie
       found (
      1
       shown)
    </div>
    <Radio
      label="Sort by"
      name="sortBy"
      onChange={[MockFunction]}
      options={
        Array [
          Object {
            "name": "release date",
            "value": "release_date",
          },
          Object {
            "name": "rating",
            "value": "vote_average",
          },
        ]
      }
      style="plain"
      value="release_date"
    />
  </SearchResultsPanel>
  <FilmsGrid
    films={Array []}
  />
</React.Fragment>
`;
